--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.8.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^5",
+    "next": "^10.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons":"^4.3.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.8"
-  }
+    "eslint-config-next": "^0.2.4"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
