--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@chakra-ui/react": "^1.8.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "cookie": "^0.4.1",
+    "firebase": "^9.6.4",
     "framer-motion": "^5",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons":"^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
