--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-spinners": "^0.11.0",
-    "recoil": "^0.5.2"
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
