--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.8.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "add": "^2.0.6",
     "cookie": "^0.4.1",
     "firebase": "^9.6.4",
     "framer-motion": "^5",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
-    "next": "^10.0.1",
+    "next": "^12.1.5",
+    "nodemailer": "^6.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
-    "react-spinners": "^0.11.0"
+    "react-spinners": "^0.11.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "eslint": "7.32.0",
